--- a/app/webroot/css/cake.line.css
+++ b/app/webroot/css/cake.line.css
@@ -11,38 +11,38 @@ body{
      width:96%;
 }
 
-.question_box,
-.answer_box{
+.left_balloon,
+.right_balloon{
      width:60%;
 }
 
-.question_box{float: left;}
-.answer_box{float: right;}
+.left_balloon{float: left;}
+.right_balloon{float: right;}
 
 
-img.left-image,
+/*img.left-image,
 img.right_image{
      width:15%;
      margin-right: 10px;
 }
 
 img.left-image{float: left;}
-img.right_image{float: right;}
+img.right_image{float: right;}*/
 
 
-p.name02,
-p.name{
+p.my_name,
+p.your_name{
      font-size: 18px;
      color: #fff;
      margin:0;
 }
 
-p.name02{text-align: right;}
+p.my_name{text-align: right;}
 
 
 
-#arrow_answer,
-#arrow_question {
+#right_message,
+#left_message {
      position: relative;
      display: inline-block;
      padding: 2%;
@@ -55,16 +55,16 @@ p.name02{text-align: right;}
      border-radius: 10px;
 }
 
-#arrow_question {
+div#left_message {
      background: #fff;
 }
 
-#arrow_answer {
+#right_message {
      background: #85e249;
 }
 
-#arrow_answer:before,
-#arrow_question:before {
+#right_message:before,
+#left_message:before {
      content: "";
      position: absolute;
      top: 0px;
@@ -75,21 +75,21 @@ p.name02{text-align: right;}
      z-index: -1;
 }
 
-#arrow_question:before {
+#left_message:before {
      left: -10px;
      background: #fff;
      border-radius: 0px 30px;
 }
 
-#arrow_answer:before{
+#right_message:before{
      right: -10px;
      background: #85e249;
      border-radius: 30px 0;
 }
 
 
-#arrow_answer:after,
-#arrow_question:after {
+#right_message:after,
+#left_message:after {
      content: "";
      position: absolute;
      top: -10px;
@@ -101,14 +101,54 @@ p.name02{text-align: right;}
      z-index: -1;
 }
 
-#arrow_question:after {
+#left_message:after {
      left: -12px;
      transform: rotate(10deg);
      border-radius: 0px 30px;
 }
 
-#arrow_answer:after {
+#right_message:after {
      right: -12px;
      border-radius: 30px 0px;
      transform: rotate(20deg);
+}
+
+
+/*フォームエリア*/
+form{
+    height:100px;
+    position:absolute;
+    bottom:0;
+}
+div.submit{
+    display: inline-block;
+    float: right;
+}
+input#formSubmit{
+    width: 200px;
+    height: 85px;
+    display: inline-block;
+    position: relative;
+	background-color: #333;
+	border-radius: 4px;
+	color: white;
+	line-height: 52px;
+	-webkit-transition: none;
+	transition: none;
+	box-shadow: 0 3px 0 #0e8c73;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+    margin-left: 10px;
+    font-size: 24px;
+}
+input#formSubmit:hover {
+	background-color: #59b1eb;
+	box-shadow: 0 3px 0 #59b1eb;
+}
+input#formSubmit:active {
+	top: 3px;
+	box-shadow: none;
+}
+textarea#RoomMesseage{
+    width: 1000px;
+    height: 80px;
 }
